--- a/TS_Basics/3_/tsconfig.json
+++ b/TS_Basics/3_/tsconfig.json
@@ -12,7 +12,12 @@
 
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "lib": [
+      "DOM",
+      "es6",
+      "DOM.Iterable",
+      "ScriptHost",
+    ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -109,7 +114,7 @@
   // adding some extra features || exclude or include
   // exclude will ignore the process on particular file. 
   // "exclude": [
-  //   // "analytics.ts",
+  //   // "analytics.ts", 
   //   // "*.dev.ts",
   //   "node_modules",
   // ]
